consul/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway
spec:
  gatewayClassName: consul
  listeners:
  - protocol: HTTP
    port: 9090
    name: http
    allowedRoutes:
      namespaces:
        from: Same
