consul/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route
spec:
  parentRefs:
    - name: api-gateway
  rules:
    - backendRefs:
      - kind: Service
        name: frontend
        # namespace: service-namespace
        port: 8080
